# TankMatrix

./: .ycm_extra_conf.py  CMakeLists.txt  params.json
src/: main.cpp
tests/: CMakeLists.txt
web/: app.js  index.html
web/app/: bot.js  brain.js  consts.js  game.js  graphics.js  main.js  map.js  obstacles.js  utils.js
web/js/: bot.js
